# SlackChatLogCounter

./: pyproject.toml
slack_log_retriver/: request.py
slack_log_retriver.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_slack_log_retriver.py
