[tool.poetry]
name = "slack-log-retriver"
version = "0.1.0"
description = ""
authors = ["t-kurimura <takahisa.kurimura@eure.jp>"]

[tool.poetry.dependencies]
python = "^3.6"
slackclient = "^2.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
